# CCDSALG_MCO1_BubbleAndMergeSort

./: BubbleSort.c  CMakeLists.txt  MergeSort.c
Bubble Sort/: bubbleSortFinal.c
Merge Sort/: mergeSortFinal.c
Selection Sort/: selectionSort.c
